# hammurabi

./: .gitignore  AGENTS.md  CLAUDE.md  DESIGN_PRINCIPLES.md  MODEL_COST.md  PROJECT_LOG.md  README.md  pyproject.toml
.githooks/: pre-commit
data/: countries.json  model_cost_log.csv
docs/: NAVIGATION.md
scripts/: fetch_gini.py  hammurabi  install-desktop.sh  log_model_cost.py  make_icon.py  sync-agent-docs.sh
src/: agents.py  charts.py  dashboard.py  economy.py  metrics.py  model_cost.py  profession.py  punishment.py  render.py  simulation.py  validation.py
tests/: test_economy.py  test_founding_params.py  test_metrics.py  test_model_cost.py  test_profession.py  test_punishment.py  test_render.py  test_validation.py
tests/smoke/: smoke_dashboard.py  smoke_param_sweep.py  smoke_screenshot.py  smoke_tick_loop.py
